# TSBot

./: .gitignore  Dockerfile  Makefile  README.md  TSBot.cabal  circle.sh  circle.yml  cqsemantics.txt  omitted.txt
benchmark/: Bench.hs  TSBotBench.hs
executable/: Main.hs
test-suite/: TSBotSpec.hs
test-suite/TSBot/ClientQuery/: ParseSpec.hs
test-suite/Web/: TSBotSpec.hs
test-suite/Web/TSBot/ClientQuery/: CommandSpec.hs  EscapeSpec.hs  NetworkSpec.hs  ParseSpec.hs  PrettyPrintSpec.hs  ResponseSpec.hs  TelnetSpec.hs
test-suite/Web/TSBot/ClientQuery/Command/: BoomerangSpec.hs  ParseSpec.hs  PrettyPrintSpec.hs  QuoteSpec.hs
