author:                 Remy Goldschmidt
version:                0.0.1
build-type:             Simple
cabal-version:          >= 1.10
category:               Web
copyright:              2015 Remy Goldschmidt <taktoa@gmail.com>
description:            A TeamSpeak 3 bot written in Haskell
extra-source-files:     CHANGELOG.md CONTRIBUTING.md README.md
license-file:           LICENSE.md
license:                MIT
maintainer:             taktoa@gmail.com
name:                   TSBot
synopsis:               A TeamSpeak 3 bot written in Haskell
tested-with:            GHC == 7.8

library
    build-depends:      base <5
                      , conduit
                      , conduit-extra
                      , conduit-combinators
                      , machines
                      , network
                      , resourcet
                      , transformers
                      , bytestring
                      , text
    default-language:   Haskell2010
    exposed-modules:    TSBot
                        -- GENERATE: New.Module
    ghc-options:        -Wall
    ghc-prof-options:   -auto-all -prof
    hs-source-dirs:     library

executable TSBot
    build-depends:      base
                      , TSBot
    default-language:   Haskell2010
    ghc-prof-options:   -auto-all -prof
    hs-source-dirs:     executable
    main-is:            Main.hs

test-suite tests
    build-depends:      base
                      , TSBot
                      , hspec ==2.*
                      , HUnit
                      , QuickCheck
    default-language:   Haskell2010
    ghc-options:        -fhpc -Wall -Werror
    hs-source-dirs:     library
                        test-suite
    main-is:            Spec.hs
    other-modules:      TSBot
                        -- GENERATE: New.Module
                        TSBotSpec
                        -- GENERATE: New.ModuleSpec
    type:               exitcode-stdio-1.0

test-suite examples
    build-depends:      base
                      , Glob ==0.7.*
                      , doctest ==0.9.*
    default-language:   Haskell2010
    hs-source-dirs:     test-suite
    main-is:            DocTest.hs
    type:               exitcode-stdio-1.0

test-suite coverage
    build-depends:      base
                      , process ==1.*
                      , regex-compat >=0.90
    default-language:   Haskell2010
    hs-source-dirs:     test-suite
    main-is:            HPC.hs
    type:               exitcode-stdio-1.0

test-suite documentation
    build-depends:      base
                      , process
                      , regex-compat
    default-language:   Haskell2010
    hs-source-dirs:     test-suite
    main-is:            Haddock.hs
    type:               exitcode-stdio-1.0

test-suite style
    build-depends:      base
                      , hlint ==1.*
    default-language:   Haskell2010
    hs-source-dirs:     test-suite
    main-is:            HLint.hs
    type:               exitcode-stdio-1.0
